--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@dicebear/avatars": "^4.10.2",
+    "@dicebear/avatars-bottts-sprites": "^4.10.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "react": "^18.0.0",
