--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@dicebear/avatars": "^4.10.2",
     "@dicebear/avatars-bottts-sprites": "^4.10.2",
+    "@dicebear/avatars-identicon-sprites": "^4.10.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "react": "^18.0.0",
